logo in tab added

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./body/galley.css" />
     <link rel="stylesheet" href="./slider/slider.css" />
     <link rel="stylesheet" href="./body/main.css">
+    <link rel="icon" href="./assets/logo.png" type="image/x-icon">
     <!-- <link rel="stylesheet" href="./career/career.css"> -->
     <link
       rel="stylesheet"
