--- a/aboutUs/aboutUs.html
+++ b/aboutUs/aboutUs.html
@@ -139,11 +139,11 @@
       </div>
     </div>
 
-    <div class="page-container2">
+    <div id="Contact-us" class="page-container2">
       <div class="contact-cta">
         <h2>Have Questions?<br>Let's Talk!</h2>
         <p>We're here to help you with anything you need — fast and friendly.</p>
-        <a href="/contact" class="cta-button">Contact Us</a>
+        <a href="mailto:info@yourdomain.com?subject=Inquiry&body=Hello,%20I%20would%20like%20to%20know%20more%20about..." class="cta-button">Contact Us</a>
       </div>
     </div>
   </section>
@@ -173,8 +173,8 @@
               <li><a href="../index.html">Home</a></li>
               <li><a href="../aboutUs/aboutUs.html">About</a></li>
               <li><a href="../index.html">Services</a></li>
-              <li><a href="../index.html">Gallery</a></li>
-              <li><a href="../aboutUs/aboutUs.html">Contact</a></li>
+              <li><a href="../index.html#gallerySection">Gallery</a></li>
+              <li><a href="../aboutUs/aboutUs.html#Contact-us">Contact</a></li>
             </ul>
           </div>
 
